# LangGraph-Form-Automation

./: .gitignore  Assignment.md  README.md  gemini_design_doc.md  opus_design_doc.md  video_traanscription.md
Version_2/backend/app/: database.py  schemas.py  seed.py
Version_2/backend/app/agent/: prompts.py  tools.py
Version_2/backend/app/routers/: chat.py  data.py
Version_2/frontend/: package-lock.json
Version_2/frontend/src/: App.css  index.css  main.jsx
Version_2/frontend/src/components/: SplitScreenLayout.css  SplitScreenLayout.jsx
Version_2/frontend/src/components/ChatPanel/: ChatInput.jsx
Version_2/frontend/src/components/InteractionForm/: OutcomesField.jsx  SentimentField.jsx
Version_2/frontend/src/store/: chatSlice.js  index.js
Version_Opus/backend/: main.py  pyproject.toml
Version_Opus/backend/app/: config.py  main.py  models.py
Version_Opus/backend/app/agent/: graph.py  state.py
Version_Opus/frontend/src/: App.jsx
Version_Opus/frontend/src/components/ChatPanel/: ChatPanel.css  ChatPanel.jsx  MessageBubble.jsx
Version_Opus/frontend/src/components/InteractionForm/: FollowUpField.jsx  InteractionForm.css  InteractionForm.jsx  MaterialsField.jsx  SamplesField.jsx  TopicsField.jsx
Version_Opus/frontend/src/services/: api.js
Version_Opus/frontend/src/store/: formSlice.js
backend/: agent.py  agent_state.py  database.db  main.py  models.py  pyproject.toml  requirements.txt  tools.py
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatPanel.jsx  FormPanel.jsx
frontend/src/store/: chatSlice.js  formSlice.js  store.js
