[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.12",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.8",
    "pydantic>=2.13.4",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.51.0",
]
